--- a/styles/globals.css
+++ b/styles/globals.css
@@ -66,7 +66,9 @@
   width: 100%;
   height: 100%;
 }
-
+.__TOAST_CONTAINER__ {
+  display: none !important;
+}
 .map-marker {
   @apply flex items-center justify-center;
 }
